--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,7 @@
-<% if display_name? == true %>
 <h1><%= @user.display_name %>'s Profile</h1>
-<% else %>
-<h1><%= @user.username %>'s Profile</h1>
-<% end %>
 
 <p>This user has <%= pluralize(@user.projects.count, "project") %>.</p>
+<p>This user has done <%= pluralize(@user.total_stitches, "stitch") %></p>
 
 <p><%= @user.profile %></p><br>
 
-<% if logged_in? && current_user == @user %>
-<p><%= button_to "Edit My Profile", edit_user_path, method: :get %></p>
-<% end %>
